fix html links in galeries-photo.php and some styles in CSS files

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     src: url("fonts/AlphaMonday.otf");
 }
 
+a {
+    cursor: pointer;
+}
+
 /***** HAMBURGER MENU *****/
 #wrap {
     font-family: sans-serif;
